chore: fix font too big

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -1,6 +1,4 @@
 .section1 {
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100vh;
   background-image: url('../assets/bg1.jpg');
@@ -33,27 +31,23 @@
 }
 
 .section2 {
-  top: 0;
-  left: 0;
   width: 100%;
   height: 100vh;
   background-image: url('../assets/bg2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
-  background-position: 50%;
+  background-position: 50% 0;
 }
 
 .content2 {
-  margin: 10% auto;
+  margin: 16% auto;
   padding: 4em 6em;
   width: fit-content;
   background-color: #ffffff;
-  font-size: 20px;
+  font-size: 18px;
 }
 
-.section3, .section4 {
-  top: 0;
-  left: 0;
+.section3 {
   width: 100%;
   height: 100vh;
   background-image: url('../assets/bg3.jpg');
@@ -75,9 +69,15 @@
   width: fit-content;
   left: 70%;
   top: -25%;
-  font-size: 18px;
+  font-size: 16px;
 }
 
 .copertinaFanzine {
   filter: drop-shadow(0 0 14px #00000050);
+}
+
+@media screen and (width < 1280px) {
+  .fanzine {
+    flex-direction: column;
+  }
 }
